<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright © 2013, 2025 IBM Corporation and others.
    All rights reserved. This program and the accompanying materials
    are made available under the terms of the Eclipse Public License v1.0
    which accompanies this distribution, and is available at
    http://www.eclipse.org/legal/epl-v10.html
 
    Contributors:
        IBM Corporation - initial API and implementation
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.jenkins-ci.plugins</groupId>
		<artifactId>plugin</artifactId>
		<version>5.0</version>
	</parent>

	<groupId>org.jenkins-ci.plugins</groupId>
	<artifactId>teamconcert</artifactId>
	<version>2.4.5</version> 
	<packaging>hpi</packaging>

	<name>Team Concert Plugin</name>
	<description>Integrates Jenkins with Rational Team Concert source control and build using the richer features of the build toolkit instead of the command line.</description>
	<url>https://github.com/jenkinsci/teamconcert-plugin</url>

	<licenses>
		<license>
			<name>Eclipse Public License v1.0</name>
			<comments>
				/*******************************************************************************
				 * Copyright (c) 2013, 2021 IBM Corporation and others.
				 * All rights reserved. This program and the accompanying materials
				 * are made available under the terms of the Eclipse Public License v1.0
				 * which accompanies this distribution, and is available at
				 * http://www.eclipse.org/legal/epl-v10.html
				 *
				 * Contributors:
				 *     IBM Corporation - initial API and implementation
				 *******************************************************************************/
			</comments>
		</license>
	</licenses>

	<developers>
		<developer>
    		<id>davidjwriter</id>
	       	<name>David Meyers</name>
		</developer>
		<developer>
            <id>sbabno</id>
            <name>Sean Babineau</name>
        </developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/jenkinsci/teamconcert-plugin.git</connection>
		<developerConnection>scm:git:https://github.com/jenkinsci/teamconcert-plugin.git</developerConnection>
		<url>https://github.com/jenkinsci/teamconcert-plugin</url>
        <tag>teamconcert-2.4.5</tag>
	</scm>

    <properties>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <serverURI>${env.serverURI}</serverURI>
        <userId>${env.userId}</userId>
        <password>${env.password}</password>
        <invalidUserId>${env.invalidUserid}</invalidUserId>
        <timeout>${env.timeout}</timeout>
        <configured>false</configured>
        <buildtoolkit>${env.buildtoolkit}</buildtoolkit>
        <excludeTests>**/MayFailIT.java</excludeTests>
        <includeTests>**/*IT.java</includeTests>
        <excludeTestsSureFire>**/UnknownTest.java</excludeTestsSureFire>
        <includeTestsSureFire>**/*Test.java</includeTestsSureFire>
        <dumpLogFiles>false</dumpLogFiles>
        <rtcJarVersion>2.4.5</rtcJarVersion>
        <!--  minimum Jenkins LTS version with Java 11 compatibility -->
        <jenkins.version>2.479.1</jenkins.version>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <findbugs.skip>true</findbugs.skip>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>      
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.release>17</maven.compiler.release>    
		<test.forkCount>1</test.forkCount>
    </properties>

	<!-- get every artifact through repo.jenkins-ci.org, which proxies all the 
		artifacts that we need -->
	<repositories>
		<repository>
			<id>hjplugin-rtc-repo</id>
			<url>file://${basedir}/repo</url>
		</repository>
		<repository>
			<id>repo.jenkins-ci.org</id>
			<url>https://repo.jenkins-ci.org/public/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.ibm.team.build</groupId>
			<artifactId>com.ibm.team.build.hjplugin-rtc</artifactId>
			<version>${rtcJarVersion}</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.team.build</groupId>
			<artifactId>com.ibm.team.build.hjplugin-rtc</artifactId>
			<version>${rtcJarVersion}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-digester3</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.8.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jenkins-ci.plugins</groupId>
			<artifactId>credentials</artifactId>
			<version>2.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.jenkins-ci.plugins</groupId>
			<artifactId>script-security</artifactId>
			<version>1373.vb_b_4a_a_c26fa_00</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.6</version>
		</dependency>
		<dependency>
			<groupId>org.jenkins-ci.plugins.workflow</groupId>
			<artifactId>workflow-scm-step</artifactId>
			<version>400.v6b_89a_1317c9a_</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.jenkins-ci.plugins.workflow</groupId>
			<artifactId>workflow-step-api</artifactId>
			<version>639.v6eca_cd8c04a_a_</version>
		</dependency>
        <dependency>
           <groupId>org.jenkins-ci.plugins.workflow</groupId>
           <artifactId>workflow-job</artifactId>
           <version>1268.v6eb_e2ee1a_85a</version>
           <scope>test</scope>
        </dependency>
           <dependency>
           <groupId>org.jenkins-ci.plugins.workflow</groupId>
           <artifactId>workflow-cps</artifactId>
           <version>3536.vb_8a_6628079d5</version>
           <scope>test</scope>
        </dependency>
        <dependency>
           <groupId>org.jenkins-ci.plugins.workflow</groupId>
           <artifactId>workflow-basic-steps</artifactId>
           <version>994.vd57e3ca_46d24</version>
           <scope>test</scope>
        </dependency>
        <dependency>
        	<groupId>org.jenkins-ci.plugins</groupId>
  			<artifactId>structs</artifactId>
  			<version>324.va_f5d6774f3a_d</version>
  			<scope>test</scope>
        </dependency>
        <dependency>
        	<groupId>org.jenkins-ci.plugins.workflow</groupId>
  			<artifactId>workflow-support</artifactId>
  			<version>839.v35e2736cfd5c</version>
  			<scope>test</scope>
        </dependency>
        <dependency>
    		<groupId>io.jenkins.plugins</groupId>
    		<artifactId>caffeine-api</artifactId>
    		<version>3.1.8-133.v17b_1ff2e0599</version>
    		<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<shutdown>kill</shutdown>
					<forkCount>${test.forkCount}</forkCount>
					<reuseForks>true</reuseForks>
					<excludes>
						<exclude>${excludeTestsSureFire}</exclude>
					</excludes>
					<includes>
						<include>${includeTestsSureFire}</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<id>integration-test</id>
						<phase>integration-test</phase>
						<goals>
							<goal>integration-test</goal>
						</goals>
						<configuration>
							<argLine>-XX:-UseStringDeduplication -XX:+UseG1GC -XX:+CMSClassUnloadingEnabled -XX:-HeapDumpOnOutOfMemoryError --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
							<shutdown>kill</shutdown>
							<forkCount>${test.forkCount}</forkCount>
							<reuseForks>true</reuseForks>
							<systemPropertyVariables>
								<com.ibm.team.build.configured>${configured}</com.ibm.team.build.configured>
								<com.ibm.team.build.toolkit>${buildtoolkit}</com.ibm.team.build.toolkit>
								<com.ibm.team.build.serverURI>${serverURI}</com.ibm.team.build.serverURI>
								<com.ibm.team.build.userId>${userId}</com.ibm.team.build.userId>
								<com.ibm.team.build.password>${password}</com.ibm.team.build.password>
								<com.ibm.team.build.userIdForAuthenticationFailures>${invalidUserId}</com.ibm.team.build.userIdForAuthenticationFailures>
								<com.ibm.team.build.timeout>${timeout}</com.ibm.team.build.timeout>
								<com.ibm.team.build.dumpLogFiles>${dumpLogFiles}</com.ibm.team.build.dumpLogFiles>
								<com.ibm.team.build.jobPropertyOverride>true</com.ibm.team.build.jobPropertyOverride>
								<com.ibm.team.build.buildToolkitVersion>${buildToolkitVersion}</com.ibm.team.build.buildToolkitVersion>
							</systemPropertyVariables>
							<summaryFile>target/failsafe-reports/failsafe-summary.xml</summaryFile>
							<excludes>
								<exclude>${excludeTests}</exclude>
							</excludes>
							<includes>
							    <include>${includeTests}</include>
							</includes>
						</configuration>
					</execution>
					<execution>
			            <id>verify</id>
			            <goals>
			              <goal>verify</goal>
			            </goals>
			            <configuration>
			              <summaryFiles>
			                <summaryFile>target/failsafe-reports/failsafe-summary.xml</summaryFile>
			              </summaryFiles>
			            </configuration>
          			</execution>
				</executions>
			</plugin>
	        <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
            </plugin>
		</plugins>
	</build>
</project>
